Kaggle Notebook | DV project | Version 4

--- a/dv-project.ipynb
+++ b/dv-project.ipynb
@@ -2,44 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2b766eb",
+   "id": "fb584d57",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-12-08T14:58:06.885328Z",
-     "iopub.status.busy": "2023-12-08T14:58:06.884260Z",
-     "iopub.status.idle": "2023-12-08T14:58:06.992442Z",
-     "shell.execute_reply": "2023-12-08T14:58:06.991197Z",
-     "shell.execute_reply.started": "2023-12-08T14:58:06.885263Z"
-    },
     "papermill": {
-     "duration": 0.006956,
-     "end_time": "2023-12-13T12:19:35.309632",
+     "duration": 0.004697,
+     "end_time": "2023-12-13T12:35:15.264071",
      "exception": false,
-     "start_time": "2023-12-13T12:19:35.302676",
+     "start_time": "2023-12-13T12:35:15.259374",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# import libraries"
+    "## Table of Content\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
+    "\n",
+    "1. [import libraries](#0)<br>\n",
+    "2. [upLoading and read dataset](#1)<br>\n",
+    "3. [Data Cleaning](#2)<br>\n",
+    "4. [Visualization](#3) <br>\n",
+    "5. [Build model ML](#4) <br>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c9bcd67",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004311,
+     "end_time": "2023-12-13T12:35:15.274487",
+     "exception": false,
+     "start_time": "2023-12-13T12:35:15.270176",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# import libraries<a id=\"0\"></a>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4969ce19",
+   "id": "ac32a44a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:35.327478Z",
-     "iopub.status.busy": "2023-12-13T12:19:35.326353Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.348235Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.347039Z"
+     "iopub.execute_input": "2023-12-13T12:35:15.286003Z",
+     "iopub.status.busy": "2023-12-13T12:35:15.285044Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.189897Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.187850Z"
     },
     "papermill": {
-     "duration": 1.033522,
-     "end_time": "2023-12-13T12:19:36.351858",
+     "duration": 0.913447,
+     "end_time": "2023-12-13T12:35:16.192278",
      "exception": false,
-     "start_time": "2023-12-13T12:19:35.318336",
+     "start_time": "2023-12-13T12:35:15.278831",
      "status": "completed"
     },
     "tags": []
@@ -53,37 +72,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42fc7f32",
+   "id": "a3371975",
    "metadata": {
     "papermill": {
-     "duration": 0.008734,
-     "end_time": "2023-12-13T12:19:36.367673",
+     "duration": 0.003919,
+     "end_time": "2023-12-13T12:35:16.200879",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.358939",
+     "start_time": "2023-12-13T12:35:16.196960",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# Loading dataset\n"
+    "# upLoading and read dataset <a id=\"1\"></a>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "535e4fdf",
+   "id": "01f74c5a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.384483Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.383249Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.413395Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.412158Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.212467Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.211826Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.240113Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.238024Z"
     },
     "papermill": {
-     "duration": 0.042153,
-     "end_time": "2023-12-13T12:19:36.416593",
+     "duration": 0.036987,
+     "end_time": "2023-12-13T12:35:16.242274",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.374440",
+     "start_time": "2023-12-13T12:35:16.205287",
      "status": "completed"
     },
     "tags": []
@@ -105,19 +124,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6467f0ec",
+   "id": "660a0e27",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.433008Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.432167Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.465233Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.464084Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.253456Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.252974Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.285252Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.283627Z"
     },
     "papermill": {
-     "duration": 0.044557,
-     "end_time": "2023-12-13T12:19:36.468362",
+     "duration": 0.041643,
+     "end_time": "2023-12-13T12:35:16.288459",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.423805",
+     "start_time": "2023-12-13T12:35:16.246816",
      "status": "completed"
     },
     "tags": []
@@ -249,19 +268,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1db8f372",
+   "id": "3ca0e652",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.485992Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.484598Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.493972Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.492697Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.299045Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.298683Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.305581Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.304696Z"
     },
     "papermill": {
-     "duration": 0.021005,
-     "end_time": "2023-12-13T12:19:36.496716",
+     "duration": 0.014238,
+     "end_time": "2023-12-13T12:35:16.307418",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.475711",
+     "start_time": "2023-12-13T12:35:16.293180",
      "status": "completed"
     },
     "tags": []
@@ -284,13 +303,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086b1c48",
+   "id": "92b29cc8",
    "metadata": {
     "papermill": {
-     "duration": 0.006985,
-     "end_time": "2023-12-13T12:19:36.511188",
+     "duration": 0.004115,
+     "end_time": "2023-12-13T12:35:16.316139",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.504203",
+     "start_time": "2023-12-13T12:35:16.312024",
      "status": "completed"
     },
     "tags": []
@@ -311,30 +330,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19dd933c",
+   "id": "57fa25b2",
    "metadata": {
     "papermill": {
-     "duration": 0.007686,
-     "end_time": "2023-12-13T12:19:36.526556",
+     "duration": 0.004207,
+     "end_time": "2023-12-13T12:35:16.324687",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.518870",
+     "start_time": "2023-12-13T12:35:16.320480",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "## Data Cleaning"
+    "## Data Cleaning<a id=\"2\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd2a370d",
+   "id": "0a612c26",
    "metadata": {
     "papermill": {
-     "duration": 0.00728,
-     "end_time": "2023-12-13T12:19:36.541286",
+     "duration": 0.004851,
+     "end_time": "2023-12-13T12:35:16.333948",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.534006",
+     "start_time": "2023-12-13T12:35:16.329097",
      "status": "completed"
     },
     "tags": []
@@ -347,19 +366,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b2346c23",
+   "id": "acb1bee7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.557468Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.557080Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.566907Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.565933Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.345616Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.345258Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.354745Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.353884Z"
     },
     "papermill": {
-     "duration": 0.02078,
-     "end_time": "2023-12-13T12:19:36.569251",
+     "duration": 0.017469,
+     "end_time": "2023-12-13T12:35:16.356660",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.548471",
+     "start_time": "2023-12-13T12:35:16.339191",
      "status": "completed"
     },
     "tags": []
@@ -392,13 +411,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f75bcf",
+   "id": "1b21516d",
    "metadata": {
     "papermill": {
-     "duration": 0.007069,
-     "end_time": "2023-12-13T12:19:36.583742",
+     "duration": 0.004368,
+     "end_time": "2023-12-13T12:35:16.365849",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.576673",
+     "start_time": "2023-12-13T12:35:16.361481",
      "status": "completed"
     },
     "tags": []
@@ -414,19 +433,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8a382791",
+   "id": "f64671c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.601209Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.600485Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.608562Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.607321Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.376317Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.375983Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.384488Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.383421Z"
     },
     "papermill": {
-     "duration": 0.020052,
-     "end_time": "2023-12-13T12:19:36.611154",
+     "duration": 0.016176,
+     "end_time": "2023-12-13T12:35:16.386473",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.591102",
+     "start_time": "2023-12-13T12:35:16.370297",
      "status": "completed"
     },
     "tags": []
@@ -452,19 +471,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f104870",
+   "id": "be656ea2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.628453Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.628034Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.645534Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.644282Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.397651Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.397302Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.410934Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.409933Z"
     },
     "papermill": {
-     "duration": 0.02921,
-     "end_time": "2023-12-13T12:19:36.648060",
+     "duration": 0.021781,
+     "end_time": "2023-12-13T12:35:16.413157",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.618850",
+     "start_time": "2023-12-13T12:35:16.391376",
      "status": "completed"
     },
     "tags": []
@@ -598,19 +617,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4f51f8c1",
+   "id": "db86ed92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.667255Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.666812Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.674040Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.672501Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.425687Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.425300Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.431283Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.429682Z"
     },
     "papermill": {
-     "duration": 0.020232,
-     "end_time": "2023-12-13T12:19:36.676662",
+     "duration": 0.015405,
+     "end_time": "2023-12-13T12:35:16.434123",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.656430",
+     "start_time": "2023-12-13T12:35:16.418718",
      "status": "completed"
     },
     "tags": []
@@ -634,19 +653,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "45f4c44a",
+   "id": "034fb359",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.694523Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.694127Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.710486Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.709173Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.446056Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.445697Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.459494Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.458387Z"
     },
     "papermill": {
-     "duration": 0.028204,
-     "end_time": "2023-12-13T12:19:36.713092",
+     "duration": 0.021811,
+     "end_time": "2023-12-13T12:35:16.461390",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.684888",
+     "start_time": "2023-12-13T12:35:16.439579",
      "status": "completed"
     },
     "tags": []
@@ -779,19 +798,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0bf9fbeb",
+   "id": "406423a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.732519Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.732138Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.758735Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.757732Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.473606Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.473277Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.494109Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.493065Z"
     },
     "papermill": {
-     "duration": 0.039675,
-     "end_time": "2023-12-13T12:19:36.761054",
+     "duration": 0.029273,
+     "end_time": "2023-12-13T12:35:16.496063",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.721379",
+     "start_time": "2023-12-13T12:35:16.466790",
      "status": "completed"
     },
     "tags": []
@@ -924,19 +943,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "349432d6",
+   "id": "6ff88a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.780829Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.780416Z",
-     "iopub.status.idle": "2023-12-13T12:19:36.788357Z",
-     "shell.execute_reply": "2023-12-13T12:19:36.787380Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.508774Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.508441Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.516322Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.515205Z"
     },
     "papermill": {
-     "duration": 0.020542,
-     "end_time": "2023-12-13T12:19:36.790509",
+     "duration": 0.016452,
+     "end_time": "2023-12-13T12:35:16.518096",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.769967",
+     "start_time": "2023-12-13T12:35:16.501644",
      "status": "completed"
     },
     "tags": []
@@ -968,13 +987,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d023a68",
+   "id": "7da84e76",
    "metadata": {
     "papermill": {
-     "duration": 0.008318,
-     "end_time": "2023-12-13T12:19:36.807566",
+     "duration": 0.005174,
+     "end_time": "2023-12-13T12:35:16.528908",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.799248",
+     "start_time": "2023-12-13T12:35:16.523734",
      "status": "completed"
     },
     "tags": []
@@ -986,19 +1005,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "92ed9717",
+   "id": "a868f827",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-13T12:19:36.826627Z",
-     "iopub.status.busy": "2023-12-13T12:19:36.826241Z",
-     "iopub.status.idle": "2023-12-13T12:19:37.312166Z",
-     "shell.execute_reply": "2023-12-13T12:19:37.311260Z"
+     "iopub.execute_input": "2023-12-13T12:35:16.541436Z",
+     "iopub.status.busy": "2023-12-13T12:35:16.541102Z",
+     "iopub.status.idle": "2023-12-13T12:35:16.891174Z",
+     "shell.execute_reply": "2023-12-13T12:35:16.889872Z"
     },
     "papermill": {
-     "duration": 0.498504,
-     "end_time": "2023-12-13T12:19:37.314637",
+     "duration": 0.359005,
+     "end_time": "2023-12-13T12:35:16.893529",
      "exception": false,
-     "start_time": "2023-12-13T12:19:36.816133",
+     "start_time": "2023-12-13T12:35:16.534524",
      "status": "completed"
     },
     "tags": []
@@ -1028,13 +1047,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a6b1f6",
+   "id": "83ef99aa",
    "metadata": {
     "papermill": {
-     "duration": 0.009544,
-     "end_time": "2023-12-13T12:19:37.333859",
+     "duration": 0.005835,
+     "end_time": "2023-12-13T12:35:16.905644",
      "exception": false,
-     "start_time": "2023-12-13T12:19:37.324315",
+     "start_time": "2023-12-13T12:35:16.899809",
      "status": "completed"
     },
     "tags": []
@@ -1078,14 +1097,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.595217,
-   "end_time": "2023-12-13T12:19:37.865272",
+   "duration": 5.029616,
+   "end_time": "2023-12-13T12:35:17.331902",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-12-13T12:19:31.270055",
+   "start_time": "2023-12-13T12:35:12.302286",
    "version": "2.4.0"
   }
  },
